Pom version updated

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.scanales</groupId>
 	<artifactId>rpg-game</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.4</version>
 
 	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
