MAYOR: Decopled funtions into more classes. Game Class is now GameMain, GamePanel, Player and Sword Class. OTHERS: Movement improvement, initial movement delay is reduced, and diagonal movement is fixed to work when the keys are not pressed at the same time

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.scanales.rpg.Game</mainClass>
+							<mainClass>org.scanales.rpg.GameMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
